--- a/CoinKeeper/CoinKeeper.vcxproj
+++ b/CoinKeeper/CoinKeeper.vcxproj
@@ -154,6 +154,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="sources\DataClasses\standingorder.cpp" />
     <ClCompile Include="sources\DataClasses\transaction.cpp" />
     <ClCompile Include="sources\DataClasses\value.cpp" />
     <ClCompile Include="sources\DataHandler\accountmanager.cpp" />
@@ -334,6 +335,7 @@
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">"$(QTDIR)\bin\moc.exe"  "%(FullPath)" -o ".\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp"  -DUNICODE -DWIN32 -DWIN64 -DQT_NO_DEBUG -DNDEBUG -DQT_CORE_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -D%(PreprocessorDefinitions)  "-I.\header" "-I.\GeneratedFiles" "-I." "-I$(QTDIR)\include" "-I.\GeneratedFiles\$(ConfigurationName)" "-I$(QTDIR)\include\QtCore" "-I$(QTDIR)\include\QtWidgets" "-I$(QTDIR)\include\QtGui" "-I$(QTDIR)\include\QtANGLE"</Command>
     </CustomBuild>
     <ClInclude Include="header\constants.h" />
+    <ClInclude Include="header\DataClasses\standingorder.h" />
     <ClInclude Include="header\DataClasses\transaction.h" />
     <ClInclude Include="header\DataClasses\value.h" />
     <ClInclude Include="header\DataHandler\database.h" />
